Changes for Aktivitetshuset K1. Fixed booking layout on mobile, k1 css, added class for roomlist, workaround for html style.

--- a/com.getshop.client/apps/AktivitetsHusetK1/skin/AktivitetsHusetK1.css
+++ b/com.getshop.client/apps/AktivitetsHusetK1/skin/AktivitetsHusetK1.css
@@ -30,7 +30,8 @@
 .PmsCalendar .dayentry:hover { background-color: #f1be37 !important; color:#000 !important; }
 .PmsCalendar .tinycalendar { background-color: #8bbd39; }
 .PmsCalendar .day.disabled { color:#eee; }
-.PmsCalendar .roomdesc .roomname{font-size: 14px;}
+.PmsCalendar .roomdesc .roomname{font-size: 13px;}
+.PmsCalendar .roomdesc img{width:auto;}
 
 
 .Menu .entries .entries .entry {width: 340px;background-color: #fff;line-height: 1.5; padding-top: 5px;}
@@ -77,7 +78,20 @@ body {font-family: 'Noto Serif', serif, Fallback, sans-serif;background:#5A8298;
     .gsarea[area="body"] .mobilenavigatemenu {display: none !important;}
      
     .PmsCalendar{font-size: 8px !important;}
-    .PmsCalendar .calendartopheader{height:250px;}
+    .PmsCalendar .roomdesc{max-width: 80px; max-height: 45px;text-align: center;}
+    .PmsCalendar .roomattributes{display:inline;padding:3px;}
+    .PmsCalendar .roomdesc .roomname{font-size:6px !Important;}
+    .PmsCalendar .readmorelink{display:none;}
+    .PmsCalendar .headerouterblock .timeheader{font-size:8px;}
+    .PmsCalendar .roomdescouter{padding-right:0;}
+    .PmsCalendar .itemlist,
+    .PmsCalendar .itemlist .roomdescouter, 
+    .PmsCalendar .itemlist .timecontainer, 
+    .PmsCalendar .itemlist .weekdaycontainer, 
+    .PmsCalendar .itemlist .outerblock{max-height:45px;}
+    .PmsCalendar .statedesrow{top:0;position:relative;}
+    .PmsCalendar .dayorweekdiv{padding:0;}
+    .PmsCalendar .weektimeheader{font-size:6px;}
     
     .gs_page_width { padding-left: 0; padding-right: 0; }
     .gs_language_selection { top: -10px; }
